tests/base/invalid/Assign_CompileFail_7.whiley
import whiley.lang.*:*

int f(int x, int y):
     return x < y
